CMFM: CYAN-200 - Archiving and Extracting .ZIP files in CM File Manager
Added support for zip and unrar commands. Zip, unzip, unlzma, unxz, uncompress and
unrar are now optional. Compress or uncompress of these types are only available
if its commands are present in filesystem

Change-Id: I30667c802bc5b678015b28bb3170377ceb37a1b8
JIRA: https://jira.cyanogenmod.org/browse/CYAN-200
Bugfix: CYAN-200
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -85,6 +85,7 @@
     <item>@string/compression_mode_tar_bzip</item>
     <item>@string/compression_mode_gzip</item>
     <item>@string/compression_mode_bzip</item>
+    <item>@string/compression_mode_zip</item>
   </string-array>
 
   <!-- The default theme definition -->
