--- a/res/values/overlay.xml
+++ b/res/values/overlay.xml
@@ -64,11 +64,17 @@
     /system/xbin/stat,
     /system/xbin/su,
     /system/xbin/tar,
-    /system/xbin/uncompress,
-    /system/xbin/unlzma,
-    /system/xbin/unxz,
-    /system/xbin/unzip,
     /system/xbin/xargs
+  </string>
+
+  <!-- Optional shell commands in a pair=value format -->
+  <string name="shell_optional_commands" translatable="false">
+    zip=/system/xbin/zip,
+    unzip=/system/xbin/unzip,
+    unlzma=/system/xbin/unlzma,
+    unxz=/system/xbin/unxz,
+    uncompress=/system/xbin/uncompress,
+    unrar=/system/xbin/unrar
   </string>
 
   <!-- The mounts file -->
