CMFM: CYAN-285 - Add ability to calculate file checksums
Added support for compute MD5 and SHA1 file checksums

Change-Id: I46cbd0d451eea76e259bdddc485774bbfd34cdc0
JIRA: https://jira.cyanogenmod.org/browse/CYAN-285
Bugfix: CYAN-285
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>

--- a/res/values/overlay.xml
+++ b/res/values/overlay.xml
@@ -68,7 +68,9 @@
     /system/xbin/unlzma,
     /system/xbin/unxz,
     /system/xbin/unzip,
-    /system/xbin/xargs
+    /system/xbin/xargs,
+    /system/xbin/md5sum,
+    /system/xbin/sha1sum
   </string>
 
   <!-- The mounts file -->
