CM File Manager Navigation fixes
Change-Id: I5f6b47b8b69e57cffac77f7bfa24f8a75d8ff1d4

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -16,5 +16,5 @@
 -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <bool name="cmcc_show_easy_mode">false</bool>
+    <bool name="cmcc_show_easy_mode">true</bool>
 </resources>
