Fix back arrow discoloration in action bar
Change-Id: Ic428a0e4fb7802f1983e7c575adb904c1f6fd65d

--- a/res/layout/navigation.xml
+++ b/res/layout/navigation.xml
@@ -46,7 +46,8 @@
                     android:layout_width="match_parent"
                     android:minHeight="?android:attr/actionBarSize"
                     android:background="?android:attr/colorPrimary"
-                    android:theme="@android:style/Theme.Material"/>
+                    android:colorControlNormal="?android:attr/colorPrimary"
+                    android:theme="@style/FileManager.NewActionBar"/>
 
             <!-- Navigation View -->
             <com.cyanogenmod.filemanager.ui.widgets.NavigationView
