--- a/res/values/dimen.xml
+++ b/res/values/dimen.xml
@@ -33,6 +33,8 @@
 
     <!-- The default row height -->
     <dimen name="default_row_height">56dp</dimen>
+    <!-- pagination height -->
+    <dimen name="half_row_height">32dp</dimen>
     <!-- An small row height -->
     <dimen name="small_row_height">40dp</dimen>
     <!-- An smallest row height -->
