--- a/res/drawable/ic_add_homescreen.xml
+++ b/res/drawable/ic_add_homescreen.xml
@@ -22,6 +22,5 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M17 3h-10c-1.1 0-1.99 .9 -1.99 2l-.01 16 7-3 7 3v-16c0-1.1-.9-2-2-2z" />
 </vector>
