--- a/res/drawable/ic_category_archives.xml
+++ b/res/drawable/ic_category_archives.xml
@@ -22,6 +22,7 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M19,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V5
+C21,3.9,20.1,3,19,3z
+M14,9h-2v2h2v2h-2v2h2v2h-2v-2h-2v-2h2v-2h-2V9h2V7h-2V5h2v2h2V9z" />
 </vector>
