--- a/res/drawable/ic_category_audio.xml
+++ b/res/drawable/ic_category_audio.xml
@@ -22,6 +22,6 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M11.5,3v9.3C11,12.1,10.5,12,10,12c-2.5,0-4.5,2-4.5,4.5S7.5,21,10,21
+c2.3,0,4.2-1.8,4.5-4l0,0V6h4V3H11.5L11.5,3z" />
 </vector>
