--- a/res/drawable/ic_file.xml
+++ b/res/drawable/ic_file.xml
@@ -22,6 +22,6 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M19,3H5C3.9,3,3,3.9,3,5v2v12c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V7V5C21,3.9,20.1,3,19,3z
+M19,19H5V7h14V19z M7,15c0-1.1,0.9-2,2-2s2,0.9,2,2s-0.9,2-2,2S7,16.1,7,15z" />
 </vector>
