--- a/res/drawable/ic_object_move.xml
+++ b/res/drawable/ic_object_move.xml
@@ -22,6 +22,7 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M12,6h8c1.1,0,2,0.9,2,2v10
+c0,1.1-0.9,2-2,2H4c-1.1,0-2-0.9-2-2L2,6c0-1.1,0.9-2,2-2h6L12,6z
+M20,13l-6-5v3H9v4h5v3L20,13z" />
 </vector>
