--- a/res/drawable/ic_overflow.xml
+++ b/res/drawable/ic_overflow.xml
@@ -15,13 +15,14 @@
     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
+    android:width="12dp"
     android:height="24dp"
-    android:viewportWidth="24"
+    android:viewportWidth="12"
     android:viewportHeight="24">
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M6,8c1.1,0,2-0.9,2-2S7.1,4,6,4S4,4.9,4,6S4.9,8,6,8z
+M6,10c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2 S7.1,10,6,10z
+M6,16c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S7.1,16,6,16z" />
 </vector>
