--- a/res/drawable/ic_rename.xml
+++ b/res/drawable/ic_rename.xml
@@ -22,6 +22,8 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M20,20H4c-1.1,0-2-0.9-2-2V6c0-1.1,0.9-2,2-2
+h16c1.1,0,2,0.9,2,2v12C22,19.1,21.1,20,20,20z
+M12,8V6h-2C9.4,6,9,6.4,9,7c0-0.6-0.4-1-1-1H6v2h2v8H6v2h2c0.6,0,1-0.4,1-1
+c0,0.6,0.4,1,1,1h2v-2h-2V8H12z" />
 </vector>
