--- a/res/drawable/ic_share.xml
+++ b/res/drawable/ic_share.xml
@@ -22,6 +22,10 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M18 16.08c-.76 0-1.44 .3 -1.96 .77 l-7.13-4.15c.05-.23 .09 -.46 .09
+-.7s-.04-.47-.09-.7l7.05-4.11c.54 .5 1.25 .81 2.04 .81 1.66 0 3-1.34
+3-3s-1.34-3-3-3-3 1.34-3 3c0 .24 .04 .47 .09 .7l-7.05
+4.11c-.54-.5-1.25-.81-2.04-.81-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31
+2.04-.81l7.12 4.16c-.05 .21 -.08 .43 -.08 .65 0 1.61 1.31 2.92 2.92 2.92 1.61 0
+2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z" />
 </vector>
