--- a/res/drawable/ic_sort_abc.xml
+++ b/res/drawable/ic_sort_abc.xml
@@ -22,6 +22,8 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M2,9v8h2v-4h2v4h2V9c0-1.1-0.9-2-2-2H4C2.9,7,2,7.9,2,9z M6,11H4V9h2V11z M18,9v6
+h4v2h-4c-1.1,0-2-0.9-2-2V9c0-1.1,0.9-2,2-2h4v2H18z
+M15,11V9c0-1.1-0.9-2-2-2H9v10h2h2c1.1,0,2-0.9,2-2v-2c0-0.6-0.4-1-1-1
+C14.6,12,15,11.6,15,11z M11,9h2v2h-2V9z M13,15h-2v-2h2V15z" />
 </vector>
