--- a/res/drawable/ic_sort_asc.xml
+++ b/res/drawable/ic_sort_asc.xml
@@ -22,6 +22,10 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M18,17c0-1.1,0.9-2,2-2c1.1,0,2,0.9,2,2s-0.9,2-2,2C18.9,19,18,18.1,18,17z
+M12,19c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2S10.9,19,12,19z
+M4,19c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2S2.9,19,4,19z M16,13
+c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2S14.9,13,16,13z
+M8,13c1.1,0,2-0.9,2-2S9.1,9,8,9s-2,0.9-2,2S6.9,13,8,13z M12,7
+c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2S10.9,7,12,7z" />
 </vector>
