--- a/res/drawable/ic_sort_desc.xml
+++ b/res/drawable/ic_sort_desc.xml
@@ -22,6 +22,10 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M6,7c0,1.1-0.9,2-2,2S2,8.1,2,7s0.9-2,2-2S6,5.9,6,7z M12,5c-1.1,0-2,0.9-2,2
+s0.9,2,2,2s2-0.9,2-2S13.1,5,12,5z
+M20,5c-1.1,0-2,0.9-2,2s0.9,2,2,2c1.1,0,2-0.9,2-2S21.1,5,20,5z
+M8,11c-1.1,0-2,0.9-2,2 s0.9,2,2,2s2-0.9,2-2S9.1,11,8,11z
+M16,11c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S17.1,11,16,11z
+M12,17c-1.1,0-2,0.9-2,2s0.9,2,2,2 s2-0.9,2-2S13.1,17,12,17z" />
 </vector>
