--- a/res/drawable/ic_sort_size.xml
+++ b/res/drawable/ic_sort_size.xml
@@ -22,6 +22,5 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M8,21H4V3h4V21z M14,9h-4v12h4V9z M20,15h-4v6h4V15z" />
 </vector>
