--- a/res/drawable/ic_sort_type.xml
+++ b/res/drawable/ic_sort_type.xml
@@ -22,6 +22,6 @@
 
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,17h2v-6h-2V17z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z
-M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M11,9h2V7h-2V9z" />
+        android:pathData="M20,22h-6c-1.1,0-2-0.9-2-2v-6c0-1.1,0.9-2,2-2h6c1.1,0,2,0.9,2,2v6
+C22,21.1,21.1,22,20,22z M7,2C4.2,2,2,4.2,2,7s2.2,5,5,5s5-2.2,5-5S9.8,2,7,2z" />
 </vector>
