--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -34,11 +34,12 @@
     <!-- Navigation drawer group last -->
     <integer name="navigation_item_order_after_roots">1</integer>
 
-    <!-- intro pager circles -->
     <integer name="default_title_indicator_footer_indicator_style">2</integer>
     <integer name="default_circle_indicator_orientation">0</integer>
     <integer name="default_underline_indicator_fade_delay">300</integer>
     <integer name="default_underline_indicator_fade_length">400</integer>
     <integer name="default_title_indicator_line_position">0</integer>
 
+    <!-- Timeout used for waiting on Storage API to return document list -->
+    <integer name="storageapi_timeout">5000</integer>
 </resources>
