--- a/res/drawable/bottom_bar_walkthrough.xml
+++ b/res/drawable/bottom_bar_walkthrough.xml
@@ -19,7 +19,7 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="@color/material_palette_blue_primary" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 
