--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -22,66 +22,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <!-- A CardView that contains a TextView -->
-            <android.support.v7.widget.CardView
-                android:id="@+id/card_view"
-                android:layout_gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                card_view:cardCornerRadius="4dp">
-
-                <TextView
-                    android:id="@+id/info_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-            </android.support.v7.widget.CardView>
-
-            <com.cyanogenmod.filemanager.ui.widgets.WrappedGridView
-                android:id="@+id/easy_modeView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:columnWidth="90dp"
-                android:numColumns="auto_fit"
-                android:verticalSpacing="10dp"
-                android:horizontalSpacing="10dp"
-                android:stretchMode="columnWidth"
-                android:gravity="center" />
-
-            <!-- A CardView that contains a TextView -->
-            <android.support.v7.widget.CardView
-                android:id="@+id/card_view3"
-                android:layout_gravity="center"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                card_view:cardCornerRadius="4dp">
-
-                <TextView
-                    android:id="@+id/info_text2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-            </android.support.v7.widget.CardView>
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="192dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -95,8 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="4dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_gravity="bottom"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="4dp">
@@ -129,5 +73,98 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:fillViewport="true"
+        android:layout_alignBottom="@+id/appbar"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!-- A CardView that contains a TextView -->
+            <android.support.v7.widget.CardView
+                android:id="@+id/add_provider"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="192dp"
+                android:layout_margin="8dp"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardBackgroundColor="@color/cloud_fill">
+
+                <!-- the cloud drawable has some weird spacing around it -->
+                <ImageView android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:background="@drawable/cloud_line"
+                     android:scaleType="fitStart"
+                     android:layout_marginLeft="-48dp"
+                     android:layout_marginBottom="-12dp"
+                     android:layout_gravity="bottom"/>
+
+                <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="43dp">
+
+                    <TextView
+                        android:text="@string/add_cloud_storage"
+                        android:id="@+id/cardHeaderText"
+                        android:textColor="@android:color/white"
+                        android:textSize="24sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:text="@string/add_cloud_storage_desc"
+                        android:id="@+id/cardChildText"
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" />
+
+                </LinearLayout>
+
+                <Button
+                    android:text="@string/dismiss"
+                    android:id="@+id/dismiss_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:textColor="@android:color/white"
+                    android:background="@android:color/transparent"/>
+
+            </android.support.v7.widget.CardView>
+
+            <com.cyanogenmod.filemanager.ui.widgets.WrappedGridView
+                android:id="@+id/easy_modeView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnWidth="90dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center" />
+
+            <!-- A CardView that contains a TextView -->
+            <android.support.v7.widget.CardView
+                android:id="@+id/blank_card"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="192dp"
+                android:layout_margin="8dp"
+                card_view:cardCornerRadius="4dp">
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
