--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -30,6 +30,8 @@
     <!-- The protected storage primary color -->
     <color name="protected_primary">#37474f</color>
 
+    <color name="cloud_fill">#1976d2</color>
+    <color name="text_color">#ffffff</color>
 
     <!-- The default background color -->
     <color name="default_background">@android:color/white</color>
