WIP: Login and Intro Updates
-Setup the ability to login to cloud storage
-Update the first intro screen
-Design cloud storage login card
-Add cloud storage login to navdrawer

Change-Id: Ia1c3a6c7c1aa622b46d4dc8bc43b3c4bfceba837

--- a/res/menu/navigation.xml
+++ b/res/menu/navigation.xml
@@ -61,8 +61,7 @@
         <item android:id="@+id/navigation_item_manage"
             android:icon="@drawable/ic_storage_sources"
             android:title="Manage storage sources"
-            android:orderInCategory="@integer/navigation_item_order_after_roots"
-            android:visible="false" /> <!-- hidden until wired up -->
+            android:orderInCategory="@integer/navigation_item_order_after_roots" />
         <item android:id="@+id/navigation_item_settings"
             android:icon="@drawable/ic_settings"
             android:title="Settings"
