--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -39,13 +39,39 @@
                     android:id="@+id/card_view"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="200dp"
+                    android:layout_margin="16dp"
                     card_view:cardCornerRadius="4dp">
 
-                <TextView
-                        android:id="@+id/info_text"
+
+                <android.support.v7.widget.CardView
+                        android:id="@+id/add_provider"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        card_view:cardCornerRadius="4dp"
+                        android:layout_margin="56dp"
+                        android:background="@color/relevance_border"
+                        android:layout_gravity="center">
+
+                    <TextView
+                            android:text="@string/add"
+                            android:id="@+id/fillerText"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center" />
+
+
+                </android.support.v7.widget.CardView>
+
+
+                <Button
+                        android:text="@string/dismiss"
+                        android:id="@+id/dismiss_card"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|end"/>
+
+
             </android.support.v7.widget.CardView>
 
             <com.cyanogenmod.filemanager.ui.widgets.WrappedGridView
