--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -138,9 +138,9 @@
         <com.cyanogenmod.filemanager.views.CirclePageIndicator
             android:id="@+id/pagination"
             android:layout_height="@dimen/half_row_height"
-            android:layout_width="fill_parent"
+            android:layout_width="40dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:gravity="center_horizontal" android:layout_centerInParent="true"/>
 
         <Button
             android:id="@+id/nextButton"
