Fix breadcrumb item divider
Fix icon used for breadcrumb divider.
This patch also removes reliance on CMFM internal theme manager for the
breadcrumb items.

Change-Id: Ia2bf6a54ce1cc196ee0a34bb8bd28530329e122a

--- a/res/drawable/ic_breadcrumb.xml
+++ b/res/drawable/ic_breadcrumb.xml
@@ -21,8 +21,6 @@
     android:viewportHeight="32">
 
     <path
-        android:fillColor="#FFFFFF"
-        android:fillAlpha="0.26"
-        android:strokeAlpha="0.26"
-        android:pathData="M-7.5,13l8,8l-8,8V13z" />
+        android:fillColor="@color/action_bar_text_color"
+        android:pathData="M5,8 L13,16 L5,24 L5,8 Z" />
 </vector>
