--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -44,6 +44,9 @@
     <!-- A derivated blue from @color/material_palette_blue_primary with some transparency -->
     <color name="blue_transparent">#9933b5e5</color>
 
+    <!-- The text color of the ActionBar -->
+    <color name="action_bar_text_color">@android:color/white</color>
+
     <!-- Navigation Drawer Background Color -->
     <color name="navigation_drawer_background">#fafafa</color>
     <!-- Navigation Drawer Selected Item Background Color -->
