[WIP] Update NavigationDrawer
Replace android.support.design NavigationView header and menu
components with a list view containing the header and menu items.
This allows for better control over item layouts. Specifically
MenuItems does not support colors per item, and subtitle (summary).

Rewire secure storage.
Fix cancel and bad password behavior when navigating to protected
storage.

Change-Id: I708a7b8e5e8352e4846195480d91fb97c8c2e67b

--- a/res/values/dimen.xml
+++ b/res/values/dimen.xml
@@ -98,6 +98,10 @@
     <dimen name="horizontal_divider_width">0.25dp</dimen>
     <!-- The vertical divider height -->
     <dimen name="vertical_divider_height">0.75dp</dimen>
+    <!-- The navigation drawer divider height -->
+    <dimen name="navigation_drawer_divider_height">1dp</dimen>
+    <dimen name="navigation_drawer_divider_margintop">7dp</dimen>
+    <dimen name="navigation_drawer_divider_marginbottom">8dp</dimen>
 
     <!-- The relevance widget width -->
     <dimen name="relevance_item_width">16dp</dimen>
@@ -126,7 +130,9 @@
     <!-- Scrim layout elevation -->
     <dimen name="scrim_layout_elevation">10dp</dimen>
     <!-- Drawer header height -->
-    <dimen name="drawer_header_height">172dp</dimen>
+    <dimen name="drawer_header_height">180dp</dimen>
+    <!-- Drawer header background (image) height -->
+    <dimen name="drawer_header_backgound_height">172dp</dimen>
 
     <!-- usage graph stuff -->
     <dimen name="legend_title_textSize">9sp</dimen>
