--- a/res/layout/navigation_view_simple_item.xml
+++ b/res/layout/navigation_view_simple_item.xml
@@ -24,8 +24,8 @@
     android:id="@+id/navigation_view_item_icon"
     android:layout_marginStart="@dimen/easy_mode_type_icon_margin_lr"
     android:layout_marginEnd="@dimen/easy_mode_type_icon_margin_lr"
-    android:layout_width="@dimen/easy_mode_type_icon_wh"
-    android:layout_height="@dimen/easy_mode_type_icon_wh"
+    android:layout_width="@dimen/circle_icon_wh"
+    android:layout_height="@dimen/circle_icon_wh"
     android:layout_gravity="center_vertical"
     android:scaleType="center"
     android:contentDescription="@null"
