--- a/res/layout/navigation_view_details_item.xml
+++ b/res/layout/navigation_view_details_item.xml
@@ -25,7 +25,7 @@
     android:layout_width="@dimen/default_row_height"
     android:layout_height="@dimen/default_row_height"
     android:layout_gravity="center_vertical"
-    android:scaleType="centerCrop"
+    android:scaleType="center"
     android:contentDescription="@null"
     android:src="@null" />
 
