--- a/res/layout/navigation_view_details_item.xml
+++ b/res/layout/navigation_view_details_item.xml
@@ -17,15 +17,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/navigation_view_details_item"
   android:layout_width="match_parent"
-  android:layout_height="@dimen/default_row_height"
+  android:layout_height="@dimen/navigation_view_details_item_height"
   android:orientation="horizontal">
 
   <com.cyanogenmod.filemanager.ui.widgets.FixedSizeImageView
     android:id="@+id/navigation_view_item_icon"
-    android:layout_width="@dimen/default_row_height"
-    android:layout_height="@dimen/default_row_height"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
     android:layout_gravity="center_vertical"
-    android:scaleType="centerCrop"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:scaleType="center"
     android:contentDescription="@null"
     android:src="@null" />
 
