Quick Search: Bring Design up to par
Change-Id: I5fd21e4bdc916e11a37e465d25ce040831190e34

--- a/res/values/dimen.xml
+++ b/res/values/dimen.xml
@@ -189,7 +189,12 @@
     <dimen name="default_title_indicator_footer_line_height">2dp</dimen>
     <dimen name="default_title_indicator_clip_padding">4dp</dimen>
 
+
     <!-- Search -->
     <dimen name="search_bar_height">48dp</dimen>
     <dimen name="search_image_dimensions">24dp</dimen>
+
+    <!-- The quick search grid -->
+    <dimen name="quick_search_grid">80dp</dimen>
+
 </resources>
