--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -140,8 +140,18 @@
 
             </android.support.v7.widget.CardView>
 
+            <TextView
+                    android:text="@string/quick_search"
+                    android:id="@+id/cardChildText"
+                    android:textSize="14sp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp" />
+
             <com.cyanogenmod.filemanager.ui.widgets.WrappedGridView
-                android:id="@+id/easy_modeView"
+                android:id="@+id/quick_search_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:columnWidth="90dp"
