--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -52,7 +52,7 @@
     <color name="dark_button_blue">#0277bd</color>
 
     <!-- The default background color -->
-    <color name="default_background">@android:color/white</color>
+    <color name="default_background">#fafafa</color>
     <!-- The default dissabled background color -->
     <color name="default_background_disabled">#f2f2f2</color>
 
