WIP: new selection hotness
Change-Id: Ic5465208a611be53c2d6b1b5b429b4e94d4319b5

--- a/res/layout/nav_fragment.xml
+++ b/res/layout/nav_fragment.xml
@@ -64,7 +64,7 @@
             <com.cyanogenmod.filemanager.ui.widgets.SelectionView
                 android:id="@+id/navigation_selectionbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/small_row_height"
+                android:layout_height="@dimen/selection_row_height"
                 android:background="@drawable/bg_material_selectionbar"
                 android:visibility="invisible"/>
 
