--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -14,235 +14,149 @@
      limitations under the License.
  -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:background="@color/oobe_background_blue"
+    android:id="@+id/container">
 
-    <android.support.v4.view.ViewPager
+    <!-- Green layer to change the alpha on-->
+    <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/intro_pager"
-        android:background="@drawable/bg_material_statusbar">
+        android:background="@color/oobe_background_green"
+        android:id="@+id/green_background"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/default_primary"
-            android:id="@+id/itemOne">
+    <!-- Background illustration that slides with the viewpager-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/fm_header_bg" />
+        <FrameLayout
+            android:layout_width="@dimen/oobe_background_width"
+            android:layout_height="@dimen/oobe_background_height"
+            android:id="@+id/background_container"
+            android:layout_gravity="center">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center_vertical"
-                android:layout_margin="24dp">
+                android:id="@+id/background"
+                android:layout_gravity="center">
 
-                <TextView
-                    android:id="@+id/welcome_textview_0"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/welcome_to"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/white"/>
+                    android:src="@drawable/oobe_bg_upper_left"
+                    android:layout_gravity="left|top"
+                    android:id="@+id/oobe_bg_upper_left"/>
 
-                <TextView
-                    android:id="@+id/welcome_textview_1"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/file"
-                    android:textSize="56sp"
-                    android:textColor="@android:color/white"/>
+                    android:src="@drawable/oobe_bg_upper_right"
+                    android:layout_gravity="top|right"
+                    android:id="@+id/oobe_bg_upper_right"/>
 
-                <TextView
-                    android:id="@+id/welcome_textview_2"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/manager"
-                    android:textSize="56sp"
-                    android:textColor="@android:color/white"/>
+                    android:src="@drawable/oobe_bg_lower_left"
+                    android:layout_gravity="left|bottom"
+                    android:id="@+id/oobe_bg_lower_left"/>
 
-                <TextView
-                    android:id="@+id/welcome_textview_3"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/welcome_desc"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/white"/>
+                    android:src="@drawable/oobe_bg_lower_right"
+                    android:layout_gravity="bottom|right"
+                    android:id="@+id/oobe_bg_lower_right"/>
 
-            </LinearLayout>
+            </FrameLayout>
 
-        </RelativeLayout>
+        </FrameLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="16dp"
-            android:paddingLeft="16dp"
-            android:id="@+id/itemTwo">
+    </FrameLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/second_title"
-                android:id="@+id/titleMessageOne"
-                android:textSize="28sp"
-                android:textColor="@android:color/white"/>
+    <include layout="@layout/cloud_background"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/first_message"
-                android:id="@+id/bottomMessageOne"
-                android:layout_alignParentBottom="true"
-                android:paddingBottom="16dp"
-                android:layout_marginBottom="@dimen/default_row_height"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"/>
+    <com.cyanogenmod.filemanager.controllers.ViewPagerCustomDuration
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/intro_pager">
 
-        </RelativeLayout>
+        <include layout="@layout/oobe_screen_1"
+                 android:id="@+id/itemOne"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="16dp"
-            android:paddingLeft="16dp"
-            android:id="@+id/itemThree">
+        <include layout="@layout/oobe_screen_2"
+                 android:id="@+id/itemTwo"/>
 
-            <TextView
-                android:id="@+id/titleMessageTwo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/second_title"
-                android:textSize="28sp"
-                android:textColor="@android:color/white"/>
+        <include layout="@layout/oobe_screen_3"
+                 android:id="@+id/itemThree"/>
 
-            <TextView
-                android:id="@+id/bottomMessageTwo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/second_message"
-                android:layout_alignParentBottom="true"
-                android:paddingBottom="16dp"
-                android:layout_marginBottom="@dimen/default_row_height"
-                android:textSize="16sp"
-                android:textColor="@android:color/white"/>
+        <include layout="@layout/oobe_screen_4"
+                 android:id="@+id/itemFour"/>
 
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/itemFour"
-            android:background="@color/cloud_fill">
-
-            <ImageView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/flying_folder"
-                android:layout_above="@+id/clouds_intro"
-                android:id="@+id/flying_folder"
-                android:layout_marginBottom="78dp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center|center_vertical|center_horizontal" />
-
-            <!-- the cloud drawable has some weird spacing around it -->
-            <ImageView android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/cloud_line"
-                android:layout_marginLeft="-50dp"
-                android:layout_marginBottom="-13dp"
-                android:layout_centerVertical="true"
-                android:id="@+id/clouds_intro"
-                android:layout_gravity="center|center_vertical|center_horizontal"/>
-
-            <View
-                android:id="@+id/generic_square"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/clouds_intro"
-                android:background="@drawable/rectangle"/>
-
-            <LinearLayout
-                android:id="@+id/cloud_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_below="@+id/clouds_intro"
-                android:layout_marginStart="24dp">
-
-                    <TextView
-                        android:text="@string/add_cloud_storage"
-                        android:id="@+id/cardHeaderText"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:fontFamily="sans-serif-medium"
-                        android:layout_height="wrap_content"/>
-
-                    <TextView
-                        android:text="@string/oobe_add_cloud_storage_desc"
-                        android:id="@+id/cardChildText"
-                        android:textColor="@android:color/white"
-                        android:textSize="16sp"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
-
-            </LinearLayout>
-
-            <Button
-                android:text="@string/connect_now"
-                android:id="@+id/dismiss_card"
-                android:layout_width="120dp"
-                android:layout_height="36dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="124dp"
-                android:textColor="@android:color/white"
-                android:background="@color/dark_button_blue"/>
-
-        </RelativeLayout>
-
-    </android.support.v4.view.ViewPager>
+    </com.cyanogenmod.filemanager.controllers.ViewPagerCustomDuration>
 
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="256dp"
+        android:id="@+id/oobe_device"
+        android:layout_centerHorizontal="true">
+
+        <com.cyanogenmod.filemanager.views.FrameLayoutNoMeasure
+            android:layout_width="288dp"
+            android:layout_height="550dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true">
+
+            <include layout="@layout/device_illustration" />
+
+        </com.cyanogenmod.filemanager.views.FrameLayoutNoMeasure>
+
+    </RelativeLayout>
+
+    <LinearLayout
         android:id="@+id/footer"
-        android:layout_height="@dimen/default_row_height"
+        android:layout_height="88dp"
         android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/prevButton"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_oobe_back"
-            android:layout_alignParentLeft="true"
-            android:textColor="@android:color/white"/>
-
-        <com.cyanogenmod.filemanager.views.CirclePageIndicator
-            android:id="@+id/pagination"
-            android:layout_height="@dimen/half_row_height"
             android:layout_width="40dp"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_horizontal" android:layout_centerInParent="true"/>
+            android:layout_height="40dp"
+            android:padding="8dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/ic_oobe_back"
+            android:textColor="@android:color/white"
+            android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+
+        <com.cyanogenmod.filemanager.views.SimplePageIndicator
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/simple_page_indicator"
+            android:layout_weight="1"
+            app:setCount="4"/>
 
         <ImageView
             android:id="@+id/nextButton"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
             android:src="@drawable/ic_oobe_forward"
-            android:layout_alignParentRight="true"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
