Create Welcome file manager experience
Change-Id: I3d713e44249680f826c91df10214c50b9f2372d9

--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -120,7 +120,7 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:text="@string/add_cloud_storage_desc"
+                        android:text="@string/cloud_desc"
                         android:id="@+id/cardChildText"
                         android:textColor="@android:color/white"
                         android:textSize="14sp"
