--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -273,4 +273,12 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <style name="FileDetailStyle" parent="@style/Base.AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
+
 </resources>
